# feloxi

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  artifacthub-repo.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-frontend.yml  ci-rust.yml  release-helm.yml  release.yml  security.yml
apps/web/: next.config.ts  openapi.json  package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  providers.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/alerts/: page.tsx
apps/web/src/app/(dashboard)/beat/: page.tsx
apps/web/src/app/(dashboard)/brokers/: page.tsx
apps/web/src/app/setup/: page.tsx
apps/web/src/components/dashboard/: dashboard-card.tsx  live-cluster.tsx  recent-errors.tsx  recent-tasks-summary.tsx  slowest-tasks.tsx  throughput-chart.tsx  top-failing-tasks.tsx  worker-leaderboard.tsx
apps/web/src/components/icons/: feloxi-logo.tsx
apps/web/src/components/layout/: header.tsx  sidebar.tsx
apps/web/src/components/metrics/: success-rate-chart.tsx  throughput-chart.tsx
apps/web/src/components/shared/: empty-state.tsx  error-alert.tsx  json-viewer.tsx  live-indicator.tsx  pagination.tsx  password-input.tsx  retry-chain.tsx  skeleton.tsx  state-badge.tsx  workflow-dag.tsx
apps/web/src/components/tasks/: task-filters.tsx  task-table.tsx
apps/web/src/components/workers/: worker-card.tsx
apps/web/src/hooks/: use-auth.ts  use-current-user.ts
apps/web/src/lib/: auth.ts  constants.ts  utils.ts
apps/web/src/lib/__tests__/: auth.test.ts  client.test.ts  utils.test.ts
apps/web/src/lib/api/: client.ts  index.ts  v1.d.ts
apps/web/src/stores/: notification-store.ts  ws-store.ts
apps/web/src/stores/__tests__/: notification-store.test.ts
apps/web/src/test/: setup.ts
apps/web/src/types/: api.ts
charts/feloxi/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/feloxi/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  clickhouse-configmap.yaml  clickhouse-service.yaml  clickhouse-statefulset.yaml  ingress.yaml  postgres-service.yaml  postgres-statefulset.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  serviceaccount.yaml  web-deployment.yaml  web-service.yaml
crates/alerting/: Cargo.toml
crates/alerting/src/: engine.rs  lib.rs  recovery.rs  rules.rs  stats.rs  templates.rs  throttle.rs
crates/alerting/src/channels/: discord.rs  email.rs  mod.rs  pagerduty.rs  slack.rs  slack_bot.rs  webhook.rs
crates/alerting/tests/: stress_tests.rs
crates/api/: Cargo.toml
crates/api/src/: alert_context.rs  alert_dispatch.rs  app.rs  main.rs  oauth.rs  openapi.rs  smtp.rs  state.rs
crates/api/src/broker_conn/: amqp_consumer.rs  commands.rs  kombu.rs  manager.rs  mod.rs  pipeline.rs  redis_consumer.rs
crates/api/src/extractors/: mod.rs
crates/api/src/middleware/: mod.rs
crates/api/src/routes/: alerts.rs  api_keys.rs  auth.rs  beat.rs  brokers.rs  dashboards.rs  health.rs  integrations.rs  metrics.rs  mod.rs  oauth_discord.rs  oauth_google.rs  oauth_slack.rs  prometheus.rs  responses.rs  setup.rs  system.rs  tasks.rs  tenants.rs  workers.rs  workflows.rs
crates/api/src/ws/: handler.rs  mod.rs  subscriptions.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  errors.rs  events.rs  lib.rs  pagination.rs  time.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/clickhouse/: aggregations.rs  mod.rs  pool.rs  retention.rs  schema.rs  system.rs  task_events.rs  worker_events.rs
crates/db/src/postgres/: alert_rules.rs  api_keys.rs  broker_configs.rs  integrations.rs  magic_links.rs  mod.rs  models.rs  pool.rs  rbac.rs  refresh_tokens.rs  retention.rs  silences.rs  tenants.rs  user_invites.rs  users.rs
crates/db/src/redis/: cache.rs  keys.rs  mod.rs  pool.rs  pubsub.rs
crates/db/tests/: clickhouse_disk_full_incident.rs
crates/engine/: Cargo.toml
crates/engine/src/: dag_resolver.rs  event_processor.rs  lib.rs  metrics.rs  retention.rs  worker_manager.rs
crates/engine/tests/: stress_tests.rs
deploy/docker/: Dockerfile.api  Dockerfile.seed  Dockerfile.web  clickhouse-config.xml  init-clickhouse.sql  init-db.sql  web-entrypoint.sh
deploy/k8s/: 00-secrets.yaml  10-postgres.yaml  11-clickhouse.yaml  12-redis.yaml  20-api.yaml  21-web.yaml  30-ingress.yaml  README.md
docs/: architecture.md  broker-configuration.md  configuration.md  connecting-celery.md  incident-clickhouse-disk-full.md  integrations.md  self-hosting.md  sizing.md
examples/: README.md  docker-compose.rabbitmq.yml  docker-compose.yml
examples/app/: Dockerfile  app.py  beat_schedule.py  celeryconfig.py  generate_load.py  requirements.txt
examples/app/tasks/: __init__.py  data.py  email.py  media.py  payments.py  workflows.py
migrations/clickhouse/: 001_create_task_events.sql  002_create_worker_events.sql  003_create_task_metrics_mv.sql  004_create_queue_metrics_mv.sql
migrations/postgres/: 001_create_tenants.sql  002_create_users.sql  003_create_roles.sql  004_create_agents.sql  005_create_alert_rules.sql  006_create_api_keys.sql  007_create_broker_configs.sql  008_create_retention_policies.sql  009_create_refresh_tokens.sql  010_extend_broker_configs.sql  011_add_broker_configs_tenant_index.sql  012_create_user_invites.sql  013_normalize_user_emails.sql  014_drop_tenant_saas_fields.sql  015_create_magic_link_tokens.sql  016_create_integrations.sql  017_alert_history_open_index.sql  018_alert_silences_and_severity.sql
scripts/: seed-demo.py
tests/integration/: README.md  conftest.py  requirements.txt  test_amqp_broker.py  test_redis_broker.py  test_worker_events.py
(+23 files in other folders)
