[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
sqlx = { workspace = true }
clickhouse = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
time = "0.3"
utoipa = { workspace = true }
