[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
time = "0.3"

[lints]
workspace = true
